k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-transferencias
  labels:
    app: api-transferencias
