k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-transferencias
  namespace: api-transferencias
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api-tx.sendmundo.com
      secretName: api-transferencias-tls
  rules:
    - host: api-tx.sendmundo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-transferencias
                port:
                  number: 80
